add duck and spinning and size changing capabilities

--- a/ducks.html
+++ b/ducks.html
@@ -6,9 +6,30 @@
 
 <body>
 
+
+
+<div class="button" id="bigger">bigger</div>
+<div class="button" id="smaller">smaller</div>
+
+
+<div class="outer">
+<div class="middle">
+<div class="inner">
+
+
+
 <img id="duck" src="./duck.png">
 
-<p>My first paragraph.</p>
+</div>
+</div>
+</div>
 
+
+
+	<script type="text/javascript" src="jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="http://jqueryrotate.googlecode.com/svn/trunk/jQueryRotate.js"></script>
+	<script type="text/javascript" src="ducks.js"></script>
 </body>
 </html>
+
+
