add spinning button

--- a/ducks.html
+++ b/ducks.html
@@ -10,6 +10,7 @@
 
 <div class="button" id="bigger">bigger</div>
 <div class="button" id="smaller">smaller</div>
+<div class="button" id="spin">spin</div>
 
 
 <div class="outer">
