add less red color changing funtionality

--- a/ducks.html
+++ b/ducks.html
@@ -24,6 +24,15 @@
 </div>
 </div>
 </div>
+<footer>
+<div class="button" id="more-red">more red</div>
+<div class="button" id="less-red">less red</div>
+<div class="button" id="more-green">more green</div>
+<div class="button" id="less-green">less green</div>
+<div class="button" id="more-blue">more blue</div>
+<div class="button" id="less-blue">less blue</div>
+
+<footer> 
 
 
 
